[tool.poetry]
name = "langsmith-demo"
version = "0.1.0"
description = ""
authors = ["Yuki Oshima <39944763+os1ma@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.1.45"
langchain-community = "^0.0.34"
langchain-openai = "^0.1.3"
langchain-anthropic = "^0.1.11"
langchain = "^0.1.16"
langchainhub = "^0.1.15"
tavily-python = "^0.3.3"
streamlit = "^1.33.0"
python-dotenv = "^1.0.1"
streamlit-feedback = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "ANN", "TRY", "EM", "FA", "SIM108", "S105", "S101", "RET505", "TCH002"]
